--- a/src/styles.css
+++ b/src/styles.css
@@ -112,3 +112,9 @@ main {
   padding-top: 15px;
   color: rgba(39, 33, 66, 0.4);
 }
+.nameF {
+  color: rgba(39, 33, 66, 0.4);
+}
+.website {
+  color: rgba(39, 33, 66, 0.4);
+}
